fix: prevent link-urls from scrolling on Firefox
In Firefox, hovering over a full URL and scrolling on it causes the container to scroll within
 the URL's inline-block.

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -157,7 +157,7 @@ footer {
         color: $dark-green;
         display: inline-block;
         max-width: 100%;
-        overflow-x: hidden;
+        overflow: hidden;
         text-overflow: ellipsis;
         vertical-align: baseline;
         white-space: nowrap;
